@@ -19,7 +19,7 @@ port = 8001
 iface = anste0
 first-address = 10.6.7.10
 gateway = 10.6.7.1
-nat-iface = br0
+#nat-iface = eth0
 
 [deploy]
 auto-create-images = 1
